gstchildproxy: Fix segmentation fault.

By checking if virtual methods are implemented before calling
them.

https://bugzilla.gnome.org/show_bug.cgi?id=750154